finished 2nd lab

--- a/2.ipynb
+++ b/2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        "[7 rows x 21 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "Name: id, dtype: int64"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +397,7 @@
        "Name: stays_total_nights, dtype: float64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "np.int64(14917)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
        "('October', 'May')"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,11 +482,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int32(2016)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "..."
+    "q = df.query('is_canceled == True').groupby('reservation_status_date_year')['id'].count().idxmax()\n",
+    "q\n"
    ]
   },
   {
@@ -498,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +519,7 @@
        "'adults'"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +550,7 @@
        "'City Hotel'"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,14 +567,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "10. Посчитайте отношение количества ушедших пользователей к общему количеству клиентов, выраженное в процентах (churn rate). Укажите, среди какой группы показатель выше."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "37.03492754837088\n",
+      "3263   40953\n"
+     ]
+    }
+   ],
+   "source": [
+    "df['rest_days'] = pd.to_datetime(df['reservation_status_date']) - pd.to_datetime(df['arrival_full_date'])\n",
+    "df['pass_user'] = df['rest_days'].dt.days < df['stays_total_nights']\n",
+    "print(df.query('pass_user == True').shape[0] / df.shape[0] * 100)\n",
+    "df['total_kids'] = df['children'] + df['babies']\n",
+    "df['has_kids'] = df['total_kids'] > 0\n",
+    "print(df.query('pass_user == True and has_kids == True').shape[0], ' ', df.query('pass_user == True and has_kids == False').shape[0] )"
+   ]
   }
  ],
  "metadata": {
